--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   qdrant:
     image: qdrant/qdrant:latest
-    restart: always
+    restart: unless-stopped
     container_name: qdrant
     ports:
       - 6333:6333
