--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ llama-index-embeddings-together = "^0.1.2"
 llama-index-llms-together = "^0.1.3"
 llama-index-vector-stores-qdrant = "^0.1.3"
 llama-index-readers-file = "^0.1.6"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
