--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ aiolimiter = "^1.1.0"
 aiometer = "^0.5.0"
 backoff = "^2.2.1"
 aiohttp = "^3.9.3"
+docx2txt = "^0.8"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
