--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ backoff = "^2.2.1"
 aiohttp = "^3.9.3"
 docx2txt = "^0.8"
 colorlog = "^6.8.2"
+llama-index-program-openai = "^0.1.4"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
